--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     谁又能告诉我如何选择，
     每当我想起分离时刻，
     悲伤就逆流成河。
+    
+    离开你也是一种快乐，
+    没人说一定非爱不可，
+    想问你双手是否温热，
+    悲伤却逆流成河。
 </body>
 </html>
